--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "dev": "blitz dev",
     "build": "blitz build",
     "start": "blitz start",
-    "studio": "blitz prisma studio",
-    "test": "vitest run --passWithNoTests",
-    "test:watch": "vitest"
+    "studio": "blitz prisma studio"
   },
   "prisma": {
     "schema": "db/schema.prisma"
@@ -34,9 +32,6 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/react-hooks": "8.0.1",
     "@types/node": "18.11.9",
     "@types/preview-email": "2.0.1",
     "@types/react": "18.0.25",
@@ -50,8 +45,7 @@
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.7",
     "typescript": "^4.8.4",
-    "vite-tsconfig-paths": "3.6.0",
-    "vitest": "0.25.3"
+    "vite-tsconfig-paths": "3.6.0"
   },
   "private": true
 }
