general error handling and some other stuff

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "yarn blitz prisma migrate deploy && yarn blitz prisma generate && yarn blitz build",
     "start": "blitz start",
     "studio": "BROWSER=none blitz prisma studio",
-    "migrate": "blitz prisma migrate dev"
+    "migrate": "blitz prisma migrate dev",
+    "railway:dev": "railway run yarn dev"
   },
   "prisma": {
     "schema": "db/schema.prisma"
@@ -28,10 +29,12 @@
     "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
     "@mantine/next": "^6.0.19",
+    "@mantine/notifications": "^6.0.19",
     "@mantine/prism": "^6.0.19",
     "@prisma/client": "4.15.0",
     "@tabler/icons-react": "^2.32.0",
     "blitz": "2.0.0-beta.32",
+    "date-fns": "^2.30.0",
     "mantine-layout-components": "^0.1.2",
     "next": "13.4.9",
     "prisma": "4.15.0",
@@ -39,7 +42,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
     "secure-password": "4.0.0",
-    "zod": "3.20.2"
+    "zod": "3.20.2",
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
