--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "blitz dev",
+    "email": "cd email/react-email && yarn dev --port 3009",
     "build": "yarn blitz prisma migrate deploy && yarn blitz prisma generate && yarn blitz build",
     "start": "blitz start",
     "studio": "BROWSER=none blitz prisma studio",
@@ -32,17 +33,20 @@
     "@mantine/notifications": "^6.0.19",
     "@mantine/prism": "^6.0.19",
     "@prisma/client": "4.15.0",
+    "@t3-oss/env-nextjs": "^0.6.1",
     "@tabler/icons-react": "^2.32.0",
     "blitz": "2.0.0-beta.32",
     "date-fns": "^2.30.0",
     "mantine-layout-components": "^0.1.2",
     "next": "13.4.9",
+    "nodemailer": "^6.9.4",
     "prisma": "4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
+    "resend": "^1.0.0",
     "secure-password": "4.0.0",
-    "zod": "3.20.2",
+    "zod": "^3.22.2",
     "zod-error": "^1.5.0"
   },
   "devDependencies": {
