--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tabler/icons-react": "^2.32.0",
     "blitz": "2.0.0-beta.32",
+    "conditional-wrap": "^1.0.2",
     "date-fns": "^2.30.0",
     "mantine-layout-components": "^0.1.2",
     "next": "13.4.9",
