added image upload

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "4.15.0",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tabler/icons-react": "^2.32.0",
+    "@uploadthing/react": "^5.5.0",
     "blitz": "2.0.0-beta.32",
     "conditional-wrap": "^1.0.2",
     "date-fns": "^2.30.0",
@@ -45,9 +46,11 @@
     "prisma": "4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "7.45.4",
     "resend": "^1.0.0",
     "secure-password": "4.0.0",
+    "uploadthing": "^5.5.3",
     "zod": "^3.22.2",
     "zod-error": "^1.5.0"
   },
