--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mantine/ds": "^6.0.19",
     "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
+    "@mantine/modals": "^6.0.20",
     "@mantine/next": "^6.0.19",
     "@mantine/notifications": "^6.0.19",
     "@mantine/prism": "^6.0.19",
